Merge sbt-freestyle-protogen into freestyle-rpc codebase, and update @rpc processing to handle latest freestyle-rpc syntax (#184)